--- a/scss/regions2/_body.scss
+++ b/scss/regions2/_body.scss
@@ -8,6 +8,7 @@ body{
 	background-image: url(../images/bg-field.jpg);
     background-blend-mode: color-burn;
     background-size: auto;
+    background-repeat: no-repeat;
     
     &:after{
 	    //position: absolute;
